{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 20,
  "lineage": "6bd4c8b3-2313-c5ec-8374-ba7fda239888",
  "resources": [
    {
      "module": "module.fullcycle-eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fullcycle-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:security-group/sg-00c20a23389b3df08",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c20a23389b3df08",
            "ingress": [],
            "name": "terraform-20240825180122310200000006",
            "name_prefix": "terraform-",
            "owner_id": "068637447302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a3705a907a38ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fullcycle-vpc.aws_vpc.fullcycle-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fullcycle-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fullcycle-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:internet-gateway/igw-0665b8a8066fd3525",
            "id": "igw-0665b8a8066fd3525",
            "owner_id": "068637447302",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-01a3705a907a38ce1"
          },
          "dependencies": [
            "module.fullcycle-vpc.aws_vpc.fullcycle-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fullcycle-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fullcycle-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:route-table/rtb-02626c33aac2397de",
            "id": "rtb-02626c33aac2397de",
            "owner_id": "068637447302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0665b8a8066fd3525",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01a3705a907a38ce1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fullcycle-vpc.aws_internet_gateway.fullcycle-igw",
            "module.fullcycle-vpc.aws_vpc.fullcycle-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fullcycle-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fullcycle-rtb-associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9c05ebc126ce7b4",
            "route_table_id": "rtb-02626c33aac2397de",
            "subnet_id": "subnet-0c3d4e16e37d663d5"
          },
          "dependencies": [
            "module.fullcycle-vpc.aws_internet_gateway.fullcycle-igw",
            "module.fullcycle-vpc.aws_route_table.fullcycle-rtb",
            "module.fullcycle-vpc.aws_subnet.fullcycle-subnets",
            "module.fullcycle-vpc.aws_vpc.fullcycle-vpc",
            "module.fullcycle-vpc.data.aws_availability_zones.aws-availability-zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d858f334ea80496b",
            "route_table_id": "rtb-02626c33aac2397de",
            "subnet_id": "subnet-035436080b6ee21f9"
          },
          "dependencies": [
            "module.fullcycle-vpc.aws_internet_gateway.fullcycle-igw",
            "module.fullcycle-vpc.aws_route_table.fullcycle-rtb",
            "module.fullcycle-vpc.aws_subnet.fullcycle-subnets",
            "module.fullcycle-vpc.aws_vpc.fullcycle-vpc",
            "module.fullcycle-vpc.data.aws_availability_zones.aws-availability-zones"
          ]
        }
      ]
    },
    {
      "module": "module.fullcycle-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fullcycle-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:subnet/subnet-0c3d4e16e37d663d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3d4e16e37d663d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068637447302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-0"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-0"
            },
            "vpc_id": "vpc-01a3705a907a38ce1"
          },
          "dependencies": [
            "module.fullcycle-vpc.aws_vpc.fullcycle-vpc",
            "module.fullcycle-vpc.data.aws_availability_zones.aws-availability-zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:subnet/subnet-035436080b6ee21f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035436080b6ee21f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068637447302",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-01a3705a907a38ce1"
          },
          "dependencies": [
            "module.fullcycle-vpc.aws_vpc.fullcycle-vpc",
            "module.fullcycle-vpc.data.aws_availability_zones.aws-availability-zones"
          ]
        }
      ]
    },
    {
      "module": "module.fullcycle-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fullcycle-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068637447302:vpc/vpc-01a3705a907a38ce1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e7559921f52afec",
            "default_route_table_id": "rtb-05dc808247bd143ba",
            "default_security_group_id": "sg-0612eb9a60d669b0d",
            "dhcp_options_id": "dopt-09432f73",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01a3705a907a38ce1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05dc808247bd143ba",
            "owner_id": "068637447302",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          }
        }
      ]
    }
  ]
}